objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>LegalOtherDifference__c</fullName>
        <formula>LegalProjectedOther__c - LegalActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalProjectedAlimony__c</fullName>
        <label>Legal Projected Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalProjectedCost__c</fullName>
        <formula>ProjectedAttorney__c + 
LegalProjectedAlimony__c + 
ProjectedPaymentsonlienorjudgment__c + 
LegalProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LegalProjectedOther__c</fullName>
        <label>Legal Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LicensingDiffrence__c</fullName>
        <formula>ProjectedLicensing__c -  ActualLicensing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LivetheaterDifference__c</fullName>
        <formula>ProjectedLivetheater__c - ActualLivetheater__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live theater Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansActualCost__c</fullName>
        <formula>ActualPersonal__c + 
ActualStudent__c + 
ActualCreditcard1__c + 
ActualCreditcard2__c + 
ActualCreditcard3__c + 
LoansActualOther__c + ActualCreditCollections__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loans Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansActualOther__c</fullName>
        <label>Loans Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansDifference__c</fullName>
        <formula>LoansProjectedCost__c - LoansActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loans Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansOtherDifference__c</fullName>
        <formula>LoansProjectedOther__c - LoansActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loans Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansProjectedCost__c</fullName>
        <formula>ProjectedPersonal__c + 
ProjectedStudent__c + 
ProjectedCreditcard1__c + 
ProjectedCreditcard2__c + 
ProjectedCreditcard3__c + 
LoansProjectedOther__c + ProjectedCreditCollections__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loans Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoansProjectedOther__c</fullName>
        <label>Loans Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalDifference__c</fullName>
        <formula>ProjectedLocal__c - ActualLocal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaintainanceOrRepairDiffrence__c</fullName>
        <formula>ProjectedMaintenanceOrRepair__c -  ActualMaintenanceOrRepair__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintainance or Repair Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaintenanceDiffrence__c</fullName>
        <formula>ProjectedMaintenance__c -  ActualMaintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_Other_Difference__c</fullName>
        <formula>ProjectedOther__c - ActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MortgageOrRentDifference__c</fullName>
        <formula>ProjectedMortgageOrRent__c - ActualMortgageOrRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage or Rent Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MoviesDifference__c</fullName>
        <formula>ProjectedMovies__c - ActualMovies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Movies Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MusicplatformsDifference__c</fullName>
        <formula>ProjectedMusicplatforms__c - ActualMusicplatforms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Music platforms Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Rental_Income_Difference__c</fullName>
        <formula>ProjectedNetRentalIncome__c - ActualNetRentalIncome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rental Income Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NightoutDifference__c</fullName>
        <formula>ProjectedNightout__c - ActualNightout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Night out Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrganizationduesorfeesDifference__c</fullName>
        <formula>ProjectedOrganizationduesorfees__c - ActualOrganizationduesorfees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization dues or fees Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overtime_Difference__c</fullName>
        <formula>ProjectedOvertime__c - ActualOvertime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentsonlienorjudgmentDifference__c</fullName>
        <formula>ProjectedPaymentsonlienorjudgment__c - ActualPaymentsonlienorjudgment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments on lien or judgment Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareActualCost__c</fullName>
        <formula>PersonalCareActualMedical__c + 
ActualHairNails__c + 
ActualClothing__c + 
ActualDrycleaning__c + 
ActualHealthclub__c + 
ActualOrganizationduesorfees__c + 
PersonalCareActualOther__c + ActualEducation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Care Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareActualMedical__c</fullName>
        <label>Personal Care Actual Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareActualOther__c</fullName>
        <label>Personal Care Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareDifference__c</fullName>
        <formula>PersonalCareProjectedCost__c - PersonalCareActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Care Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareMedicalDifference__c</fullName>
        <formula>PersonalCareProjectedMedical__c - PersonalCareActualMedical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Care Medical Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareOtherDifference__c</fullName>
        <formula>PersonalCareProjectedOther__c - PersonalCareActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Care Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareProjectedCost__c</fullName>
        <formula>PersonalCareProjectedMedical__c + 
ProjectedHairNails__c + 
ProjectedClothing__c + 
ProjectedDrycleaning__c + 
ProjectedHealthclub__c + 
ProjectedOrganizationduesorfees__c + 
PersonalCareProjectedOther__c + ProjectedEducation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Care Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareProjectedMedical__c</fullName>
        <label>Personal Care Projected Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalCareProjectedOther__c</fullName>
        <label>Personal Care Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PersonalDifference__c</fullName>
        <formula>ProjectedPersonal__c - ActualPersonal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsActualCost__c</fullName>
        <formula>ActualFood__c + 
PetsActualMedical__c + 
ActualGrooming__c + 
ActualToys__c + 
PetsActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsActualMedical__c</fullName>
        <label>Pets Actual Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsActualOther__c</fullName>
        <label>Pets Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsDifference__c</fullName>
        <formula>PetsProjectedCost__c - PetsActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsFoodDifference__c</fullName>
        <formula>ProjectedFood__c - ActualFood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Food Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsMedicalDifference__c</fullName>
        <formula>PetsProjectedMedical__c - PetsActualMedical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Medical Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsOtherDifference__c</fullName>
        <formula>PetsProjectedOther__c - PetsActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsProjectedCost__c</fullName>
        <formula>ProjectedFood__c + 
PetsProjectedMedical__c + 
ProjectedGrooming__c + 
ProjectedToys__c + 
PetsProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsProjectedMedical__c</fullName>
        <label>Pets Projected Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetsProjectedOther__c</fullName>
        <label>Pets Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhoneDifference__c</fullName>
        <formula>ProjectedPhone__c - ActualPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectedAFDC__c</fullName>
        <label>AFDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedAttorney__c</fullName>
        <label>Projected Attorney</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedBalance__c</fullName>
        <formula>ProjectedTotalMonthlyIncome__c -  TotalProjectedCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedBonuses__c</fullName>
        <label>Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCable__c</fullName>
        <label>Projected Cable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCharity1__c</fullName>
        <label>Projected Charity 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCharity2__c</fullName>
        <label>Projected Charity 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCharity3__c</fullName>
        <label>Projected Charity 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedChildSupport__c</fullName>
        <label>Child Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedClothing__c</fullName>
        <label>Projected Clothing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedComissions__c</fullName>
        <label>Comissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedConcerts__c</fullName>
        <label>Projected Concerts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCreditCollections__c</fullName>
        <label>Projected Credit Collections</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCreditcard1__c</fullName>
        <label>Projected Credit card1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCreditcard2__c</fullName>
        <label>Projected Credit card2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedCreditcard3__c</fullName>
        <label>Projected Credit card3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedDiningout__c</fullName>
        <label>Projected Dining out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedDrycleaning__c</fullName>
        <label>Projected Dry cleaning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedEducation__c</fullName>
        <label>Projected Education</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedElectricity__c</fullName>
        <label>Projected Electricity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedEmployment__c</fullName>
        <label>Employment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedFederal__c</fullName>
        <label>Projected Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedFood__c</fullName>
        <label>Projected Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedFuel__c</fullName>
        <label>Projected Fuel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedGas__c</fullName>
        <label>Projected Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedGroceries__c</fullName>
        <label>Projected Groceries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedGrooming__c</fullName>
        <label>Projected Grooming</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedHairNails__c</fullName>
        <label>Projected Hair Nails</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedHealthclub__c</fullName>
        <label>Projected Health club</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedHomeEquityLine__c</fullName>
        <label>Projected Home Equity Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedHomeOwnerAssoc__c</fullName>
        <label>Projected Home Owner Assoc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedHomeownerRentersInsurance__c</fullName>
        <label>Projected Homeowner/Renters Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedInsurance__c</fullName>
        <label>Projected Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedInterestDividen__c</fullName>
        <label>Interest &amp; Dividen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedInvestmentaccount__c</fullName>
        <label>Projected Investment account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLicensing__c</fullName>
        <label>Projected Licensing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLivetheater__c</fullName>
        <label>Projected Live theater</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLocal__c</fullName>
        <label>Projected Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMaintenanceOrRepair__c</fullName>
        <label>Projected Maintenance or Repair</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMaintenance__c</fullName>
        <label>Projected Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMonthlyIncomeAlimony__c</fullName>
        <label>Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMortgageOrRent__c</fullName>
        <label>Projected Mortgage or Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMovies__c</fullName>
        <label>Projected Movies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedMusicplatforms__c</fullName>
        <label>Projected Music platforms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedNetRentalIncome__c</fullName>
        <label>Net Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedNightout__c</fullName>
        <label>Projected Night out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedOrganizationduesorfees__c</fullName>
        <label>Projected Organization dues or fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedOther__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedOvertime__c</fullName>
        <label>Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPaymentsonlienorjudgment__c</fullName>
        <label>Projected Payments on lien or judgment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPersonal__c</fullName>
        <label>Projected Personal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPhone__c</fullName>
        <label>Projected Phone</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedRetirementaccount__c</fullName>
        <label>Projected Retirement account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedSSI__c</fullName>
        <label>SSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedSportingevents__c</fullName>
        <label>Projected Sporting events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedState__c</fullName>
        <label>Projected State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedStudent__c</fullName>
        <label>Projected Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedSupplies__c</fullName>
        <label>Projected Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedTotalMonthlyIncome__c</fullName>
        <formula>(ProjectedEmployment__c + 
ProjectedOvertime__c + 
ProjectedInterestDividen__c + 
ProjectedNetRentalIncome__c + 
ProjectedBonuses__c + 
ProjectedComissions__c + 
ProjectedSSI__c + 
ProjectedChildSupport__c + 
ProjectedAFDC__c + 
ProjectedMonthlyIncomeAlimony__c + 
ProjectedUnemployment__c + 
ProjectedOther__c ) - ProjectedWithholding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedToys__c</fullName>
        <label>Projected Toys</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedUnemployment__c</fullName>
        <label>Unemployment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedVehiclePayment__c</fullName>
        <label>Projected Vehicle Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedWasteRemoval__c</fullName>
        <label>Projected Waste Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedWaterAndSewer__c</fullName>
        <label>Projected Water and Sewer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedWithholding__c</fullName>
        <label>Withholding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RetirementaccountDifference__c</fullName>
        <formula>ProjectedRetirementaccount__c - ActualRetirementaccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retirement account Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSI_Difference__c</fullName>
        <formula>ProjectedSSI__c - ActualSSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSI Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsActualCost__c</fullName>
        <formula>ActualRetirementaccount__c + 
ActualInvestmentaccount__c + 
SavingsorInvestmentsActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings or Investments Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsActualOther__c</fullName>
        <label>Savings or Investments Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsDifference__c</fullName>
        <formula>SavingsorInvestmentsProjectedCost__c - SavingsorInvestmentsActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings or Investments Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsOtherDifference__c</fullName>
        <formula>SavingsorInvestmentsProjectedOther__c - SavingsorInvestmentsActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings or Investments Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsProjectedCost__c</fullName>
        <formula>ProjectedRetirementaccount__c + 
ProjectedInvestmentaccount__c + 
SavingsorInvestmentsProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings or Investments Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SavingsorInvestmentsProjectedOther__c</fullName>
        <label>Savings or Investments Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SportingeventsDifference__c</fullName>
        <formula>ProjectedSportingevents__c - ActualSportingevents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sporting events Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateDifference__c</fullName>
        <formula>ProjectedState__c - ActualState__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StudentDifference__c</fullName>
        <formula>ProjectedStudent__c - ActualStudent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SuppliesDiffrence__c</fullName>
        <formula>ProjectedSupplies__c -  ActualSupplies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplies Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxesActualCost__c</fullName>
        <formula>ActualFederal__c + 
ActualState__c + 
ActualLocal__c + 
TaxesActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxesActualOther__c</fullName>
        <label>Taxes Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxesDifference__c</fullName>
        <formula>TaxesProjectedCost__c - TaxesActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxesOtherDifference__c</fullName>
        <formula>TaxesProjectedOther__c - TaxesActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Other Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>